# muzik-tagger

./: .gitignore  ARCHITECTURE.md  Cargo.toml  pyproject.toml
examples/: codec_compare.rs
src/: cli.rs  db.rs  main.rs  models.rs  recommend.rs  scan.rs
src/embed/: audio.rs  metadata.rs  mod.rs
src/muzik/: cli.py  db.py  embed_audio.py  embed_metadata.py  models.py  recommend.py  scan.py
src/net/: mod.rs  node.rs  protocol.rs  query.rs
tests/: test_recommend.py
