[package]
name = "mzk"
version = "0.1.0"
edition = "2024"
description = "Distributed music discovery network with federated P2P search"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Audio metadata
lofty = "0.22"

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# ML inference
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
tokenizers = { version = "0.21", features = [] }

# Vector database
lancedb = "0.16"
arrow-array = "53"
arrow-schema = "53"

# P2P networking
libp2p = { version = "0.54", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "dns",
    "identify",
    "kad",
    "request-response",
    "tokio",
    "macros",
    "serde",
] }

# Vector math
ndarray = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Hashing
sha2 = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Progress bars
indicatif = "0.17"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# XDG paths
dirs = "6"

# Misc
walkdir = "2"
hex = "0.4"
async-trait = "0.1"
