[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muzik-tagger"
version = "0.1.0"
description = "Vector music recommendation system using CLAP audio embeddings and metadata"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "mutagen>=1.47.0",
    "lancedb>=0.17.0",
    "sentence-transformers>=3.0.0",
    "laion-clap>=1.1.6",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
muzik = "muzik.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/muzik"]
